# xmasfetch

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  ascii.h  info.cpp  info.h  main.cpp  utils.hxx  windows_info.cpp  windows_info.h  wmi.hxx
.github/ISSUE_TEMPLATE/: bug_report.md  platform-support-request.md
linux/: linux_info.cpp  linux_info.h
src/: ascii.h  colors.cpp  colors.h  info.cpp  info.h  info.rs  lib.rs  main.cpp  main.rs  utils.cpp  utils.h  utils.hxx
src/freebsd/: freebsd_info.cpp  freebsd_info.h
src/linux/: linux_info.cpp  linux_info.h
src/shared/: declariations.h  unix.cpp  unix.h
src/windows/: windows_info.cpp  windows_info.h  wmi.hxx
windows/: windows_info.cpp  windows_info.h  wmi.hxx
