[package]
name = "xmasfetch"
description = "Simple Christmas fetch tool written in Rust"
repository = "https://github.com/mich4ld/xmasfetch"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfetch = "0.1.0"
humantime = "2.1.0"